Fix submit button alignment

--- a/frontend/pages/auth/styles.scss
+++ b/frontend/pages/auth/styles.scss
@@ -31,6 +31,10 @@
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
+
+    &_center {
+      justify-content: center;
+    }
   }
 
   &__error {
